--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="main">
         <p class="main__paragraf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minus temporibus eveniet. Eveniet, et placeat. Dicta deleniti libero natus temporibus itaque nobis sequi ducimus! Debitis expedita architecto aut autem quaerat? ipsum dolor sit amet consectetur adipisicing elit. Unde nam consequatur voluptas amet, itaque asperiores! Sunt in accusantium vitae minima blanditiis, ab doloribus quaerat, optio excepturi nemo dolores reprehenderit neque?</p>
+        <p class="main__paragraf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minus temporibus eveniet. Eveniet, et placeat. Dicta deleniti libero natus temporibus itaque nobis sequi ducimus! Debitis expedita architecto aut autem quaerat? ipsum dolor sit amet consectetur adipisicing elit. Unde nam consequatur voluptas amet, itaque asperiores! Sunt in accusantium vitae minima blanditiis, ab doloribus quaerat, optio excepturi nemo dolores reprehenderit neque?</p>
     </div>
 </body>
 
